# Betriebssysteme

./: token
Blatt1/: Arbeitsblatt1.docx
Blatt2/: BS_WiSe21_A2_LockTim_MitkevicDennis.docx  script1  script2  script3
Blatt3/: .~lock.BS_WiSe21_A3_LockTim_MitkevicDennis.odt#  BS_WiSe21_A3_LockTim_MitkevicDennis.docx  BS_WiSe21_A3_LockTim_MitkevicDennis.odt  arrraytest  (+6 more)
Blatt6/webBot/: 10_12_https:\\www.welt.de\.html  11_13_https:\\www.zdf.de\.html  13_10_https:\\netzpolitik.org\.html  13_19_https:\\www.bahn.de\p\view\index.shtml.html  13_22_https:\\www.ibm.com\de-de.html  13_25_https:\\www.kernel.org\.html  14_5_https:\\twitter.com\.html  15_0_https:\\www.google.de\.html  15_17_https:\\www.amazon.de\.html  16_26_https:\\wiki.archlinux.org\.html  17_23_https:\\www.apple.com\.html  17_8_https:\\www.faz.net\aktuell\.html  18_15_https:\\www.golem.de\.html  18_21_https:\\www.wetter.com\.html  19_14_https:\\www.heise.de\.html  19_9_https:\\www.focus.de\.html  3_1_https:\\duckduckgo.com\.html  5_4_https:\\www.instagram.com\.html  6_2_https:\\www.bing.com\.html  6_6_https:\\www.netflix.com\de\.html  7_11_https:\\www.spiegel.de\.html  7_16_https:\\www.computerbase.de\.html  7_20_https:\\www.telekom.de\start.html  7_24_https:\\github.com.html  7_27_https:\\lwn.net\.html  9_18_https:\\www.ebay-kleinanzeigen.de\.html  9_3_https:\\www.facebook.com\.html  CMakeLists.txt  Makefile  Queue.cpp  Queue.h  WebBot.cpp  WebBot.h  main.cpp  webBot  webBot.cpp  webBot.h
Blatt6/webBot/curl/: Makefile
Blatt6/webBot/webBot/: webBot  webBot.cpp
Blatt6/webBot/web_request/: web_request.cpp
(+35 files in other folders)
